--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <name>onepage-fx</name>
 
     <properties>
+        <client.version>1.0.0</client.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.9.1</junit.version>
         <kotlin.version>1.7.20</kotlin.version>
@@ -123,10 +124,10 @@
                         </executions>
                         <configuration>
                             <workingDirectory>${project.basedir}</workingDirectory>
-                            <executable>./build_app_mac.sh</executable>
+                            <executable>./scripts/build_app_mac.sh</executable>
                             <environmentVariables>
                                 <APP_VERSION>
-                                    1.0.0
+                                    ${client.version}
                                 </APP_VERSION>
                                 <PROJECT_VERSION>
                                     ${project.version}
